--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./stye.css" />
+    <link rel="stylesheet" href="./style.css" />
+
     <title>Document</title>
   </head>
   <body>
     <main class="wrapper">
-      <button class="btn btn1">1</button>
-      <button class="btn btn2">2</button>
-      <button class="btn btn3">3</button>
+      <button class="btn">1</button>
+      <button class="btn">2</button>
+      <button class="btn">3</button>
 
-      <p class="text1">Первый текст <img src="./img/1.jpeg" alt="" /></p>
-      <p class="text2">Второй текст <img src="./img/2.jpeg" alt="" /></p>
-      <p class="text3">Третий текст <img src="./img/3.jpeg" alt="" /></p>
+      <p class="text">1 <img src="./img/1.jpeg" alt="" /></p>
+      <p class="text">Второй текст <img src="./img/2.jpeg" alt="" /></p>
+      <p class="text">Третий текст <img src="./img/3.jpeg" alt="" /></p>
     </main>
 
     <script src="./main.js"></script>
